# stablediffusion

./: .flake8  .gitignore  .gitmodules  .isort.cfg  CITATION.cff  DockerFile  Dockerfile  Hijab girl  Imagem teste  LICENSE  LICENSE-MODEL  Makefile  No  README.md  cog.yaml  environment.yaml  generate_randomly.sh  generate_using_coco.sh  inpaint.sh  inpainting.py  inpainting_from_coco.py  main.py  modelcard.md  pyproject.toml  requirements-app.txt  requirements.txt  run_ampere.sh  script.sh  setup.py  setup_ampere.sh  stable_diffusion2_inpainter.py  test_cuda.py  train.sh
.github/workflows/: ci.yaml  main.yml
checkpoints/: checkpoints.txt
configs/karlo/: decoder_900M_vit_l.yaml  improved_sr_64_256_1.4B.yaml  prior_1B_vit_l.yaml
configs/stable-diffusion/: train_colossalai.yaml  train_ddp.yaml  v2-1-stable-karlo-inference.yaml  v2-1-stable-unclip-h-inference.yaml  v2-1-stable-unclip-l-inference.yaml  v2-inpainting-inference.yaml  x4-upscaling.yaml
custom_inpainting/: generate.py  inpainting.py  inpainting_area.py  prompt_generation.py  utils.py
doc/: UNCLIP.MD
infra/: .gitignore  .sample.env  Dockerfile  Pulumi.yaml  __main__.py  cmd.sh  destroy.sh  index.html  readme.md  requirements.txt  server.py  start.sh
ldm/: __init__.py  __version__.py  global_opt.py  util.py
ldm/data/: base.py  teyvat.py  util.py
ldm/models/: autoencoder.py
ldm/modules/: attention.py  ema.py
prompts/: prompts_flame_tags.txt
scripts/: img2img.py  inpaint.py  txt2img.py
scripts/gradio/: depth2img.py  inpainting.py  (+1 more)
stable_diffusion.egg-info/: PKG-INFO  SOURCES.txt
(+46 files in other folders)
